--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "com.lrxliveandreadplayer.demo"
+        applicationId "com.lrx.live.player"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
@@ -14,6 +14,12 @@ android {
         ndk {
             abiFilters "armeabi-v7a","x86"
         }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME :'com.lrx.live.player' ,
+                JPUSH_APPKEY : "d4f1d053cfdba36011487fea", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
     }
     buildTypes {
         release {
@@ -24,13 +30,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.1.0'
-
+    compile 'com.android.support:cardview-v7:26.1.0'
     //player
     compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     //live
-    compile (name:'RecordLib-release',ext:'aar')
+    compile(name: 'RecordLib-release', ext: 'aar')
+    //jmessage
+    compile 'cn.jiguang.sdk:jmessage:2.5.0'
+    // 此处以JMessage 2.5.0 版本为例。
+    compile 'cn.jiguang.sdk:jcore:1.1.9'
+    // 此处以JCore 1.1.9 版本为例。
 }
