--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lrxliveandreadplayer.demo">
+    package="com.lrx.live.player">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -15,9 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
+        android:name="com.lrxliveandreadplayer.demo.MyApplication"
         android:theme="@style/AppTheme2">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.lrxliveandreadplayer.demo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,11 +25,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activitys.IjkLivePlayer"></activity>
-        <activity android:name=".activitys.LiveActivity"></activity>
-        <activity android:name=".activitys.ScreenRecordActivity"></activity>
-        <activity android:name=".activitys.AudioRecordActivity"></activity>
-        <activity android:name=".activitys.ChartGroupActivity"></activity>
+        <activity android:name="com.lrxliveandreadplayer.demo.activitys.IjkLivePlayer"></activity>
+        <activity android:name="com.lrxliveandreadplayer.demo.activitys.LiveActivity"></activity>
+        <activity android:name="com.lrxliveandreadplayer.demo.activitys.ScreenRecordActivity"></activity>
+        <activity android:name="com.lrxliveandreadplayer.demo.activitys.AudioRecordActivity"></activity>
+        <activity android:name="com.lrxliveandreadplayer.demo.activitys.ChartGroupActivity"></activity>
     </application>
 
 </manifest>
