--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0'
     //player
     compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -55,4 +56,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    //图片选择器
+    compile 'cn.finalteam.rxgalleryfinal:library:1.1.3'
+    //butterknife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
