实现播放器

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme_Light.Default"
             />
+
+        <service android:name="cn.jpush.android.service.DaemonService"></service>
     </application>
 
 </manifest>
