--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         ndk {
             abiFilters "armeabi-v7a","x86"
@@ -31,12 +32,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
     //player
     compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile(name: 'LiteAVSDK_Smart', ext: 'aar')
     //live
     compile(name: 'RecordLib-release', ext: 'aar')
     //jmessage
