--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,9 @@ android {
         multiDexEnabled true
 
         ndk {
-            abiFilters "armeabi-v7a","x86"
+            abiFilters "armeabi", "armeabi-v7a","x86"
+            // 如果您使用的是商业版，只能使用 armeabi 架构，即：
+            // abiFilters "armeabi",
         }
 
         manifestPlaceholders = [
@@ -36,10 +38,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    //player
+
     compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile(name: 'LiteAVSDK_Smart', ext: 'aar')
+    compile(name: 'LiteAVSDK_Smart_5.1.5293', ext: 'aar')
     //live
     compile(name: 'RecordLib-release', ext: 'aar')
     //jmessage
